# ImageProcessor

image_processor/: CMakeLists.txt  Parser.cpp  Parser.h  bilateral.cpp  bilateral.h  bmp_reader.cpp  bmp_reader.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  exceptions.h  filters.cpp  filters.h  gaussian_blur.cpp  gaussian_blur.h  gray_scale.cpp  gray_scale.h  image_processor.cpp  negative.cpp  negative.h  sharpening.cpp  sharpening.h
